injected Electron + modified packages and README

--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "BassoonTracker",
+  "name": "BassoonTrackerDesktop",
   "version": "0.4.3",
-  "description": "Old School Amiga mod and xm tracker in plain javascript",
-  "main": "index.html",
-  "repository": "https://github.com/steffest/BassoonTracker",
-  "author": "Steffest",
+  "description": "Old School Amiga mod and xm tracker in plain javascript with Electron support",
+  "main": "src/main.js",
+  "scripts": {
+    "start": "electron .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": "https://github.com/diomis/bassoon-tracker-desktop",
+  "author": "denomis",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "^1.1.0",
-    "grunt-base64": "^0.1.0",
-    "grunt-contrib-clean": "*",
-    "grunt-contrib-compress": "^2.0.0",
-    "grunt-contrib-concat": "*",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^4.0.1",
-    "grunt-regpack": "^0.1.0",
-    "grunt-run": "^0.8.1",
-    "grunt-spritesmith": "^6.8.0",
-    "grunt-text-replace": "^0.4.0"
+    "electron": "^28.0.0"
   }
 }
