--- a/package.json
+++ b/package.json
@@ -3,15 +3,36 @@
   "version": "0.4.3",
   "description": "Old School Amiga mod and xm tracker in plain javascript with Electron support",
   "main": "main.js",
+  "build": {
+    "appId": "bassoon-tracker-desktop",
+    "directories": {
+      "buildResources": "resources"
+    },
+    "win": {
+      "icon": "icons/icon.ico",
+      "target": [
+        "portable"
+      ]
+    },
+    "dmg": {
+      "icon": "icons/icon.icns",
+      "target": [
+        "portable"
+      ]
+    }
+  },
   "scripts": {
     "start": "grunt && grunt sprites && electron .",
+    "dist": "electron-builder",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "https://github.com/diomis/bassoon-tracker-desktop",
   "author": "denomis",
   "license": "MIT",
   "devDependencies": {
+    "@electron/packager": "^18.1.1",
     "electron": "^28.0.0",
+    "electron-builder": "^24.9.1",
     "grunt": "^1.1.0",
     "grunt-base64": "^0.1.0",
     "grunt-contrib-clean": "*",
